Fix z-index of the popups - calendar and filters (#117)

--- a/wp-content/themes/trek-travel-theme/src/scss/_header.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_header.scss
@@ -362,6 +362,12 @@
   }
 }
 
+#homeHeaderModal,
+#mobileCalendarModal,
+#filterModal {
+  z-index: 9999999;
+}
+
 #homeHeaderModal{
   .modal-content{
     height: 100%;
